--- a/style/icon.css
+++ b/style/icon.css
@@ -27,6 +27,9 @@
   .icon-check:before {
     content: "\e903";
   }
+  .icon-rounded-arrow:before {
+    content: "\e901";
+  }
   .icon-left-arrow:before {
     content: "\e904";
   }
