--- a/style/guide.less
+++ b/style/guide.less
@@ -86,6 +86,7 @@
 		color: #000;
 		font-family: 'Heebo';
 		font-size: 3em;
+		line-height: 1;
 		margin: 0.5em 0;
 		transition: all 0.7s 0.8s;
 	}
@@ -136,8 +137,8 @@
 		font-style: normal;
 		width: 10em;
 		height: 10em;
-		right: 2%;
-		bottom: 8%;
+		right: 4%;
+		bottom: 9%;
 		transform: scale(0.3);
 		opacity: 0;
 		i {
@@ -388,10 +389,28 @@
 	}
 }
 section.sectionReady {
-	// i.circle {
-	// 	background: conic-gradient(rgba(11, 77, 109, 0), rgba(11, 77, 109, 1));
-	// 	width: 90vh;
-	// }
+	position: relative;
+	&.play {
+		.contentWrapper {opacity: 1;}
+		span.circle .donut {stroke-dashoffset: 0;}
+	}
+	span.circle {
+		background: conic-gradient(#093042 100%, #3bda82 100%);
+		width: 90vh;		
+		border-radius: 50%;
+		position: absolute;
+		left: 50%;
+		top: 50%;
+		transform: translate(-50%, -50%);
+		z-index: 0;
+		svg {
+			width: 100%;
+		}
+		.donut {
+			stroke-dashoffset: -1455;
+			transition:  stroke-dashoffset 1s 0.5s;
+		}
+	}
 
 	.contentWrapper {
 		color: #fff;
@@ -404,18 +423,57 @@ section.sectionReady {
 		justify-content: center;
 		text-align: center;
 		overflow: hidden;
+		opacity: 0;
+		transition: opacity 1s 1s;
 	}
 
 	h3 {
-		font-size: 3.8em;
+		color: @color1;
+		font-size: 3em;
 		font-family: "agb";
+		margin: 0;
+	}
+	ul {
+		display: flex;
+		align-items: center;
+		position: relative;
+		list-style: none;
+		padding: 0;
+		margin: 4em 0;
+		&:before {
+			content: '';
+			width: 1px;
+			position: absolute;
+			height: 100%;
+			background-color: rgba(49, 131, 169, 0.5);
+			left: 50%;
+			top: 0;
+		}
+	}
+	li {
+		padding: 0 4em;
+		i[class*="icon-"] {
+			color: #7AC6FB;
+			font-size: 2em;
+			border: 2px solid;
+			border-radius: 50%;
+			width: 2em;
+			display: flex;
+			height: 2em;
+			align-items: center;
+			justify-content: center;
+			margin: 0 auto 1em;
+		}
+	}
+	p {
+		color: #3183A9;
+		line-height: 1.2;
+		margin: 0;
 	}
 
 	.btn {
 		font-size: 1.3em;
 		display: block;
-		width: 50%;
-		max-width: 350px;
 	}
 }
 @media only screen and (max-width: 1500px) {
