--- a/style/icon.css
+++ b/style/icon.css
@@ -21,6 +21,12 @@
     -moz-osx-font-smoothing: grayscale;
   }
   
+  .icon-list:before {
+    content: "\e902";
+  }
+  .icon-settings:before {
+    content: "\e907";
+  }
   .icon-mouse:before {
     content: "\e900";
   }
